@@ -1,16 +1,15 @@
 package com.library.service;
 
 import com.library.entity.User;
-import com.library.exception.exceptions.BadRequestException;
 import com.library.exception.exceptions.NotFoundException;
 import com.library.repository.RoleRepository;
 import com.library.repository.UserRepository;
 import com.library.service.interfaces.IUserService;
 import com.library.utils.SortingPagination;
 import com.library.utils.dto.Auth.CreateUserDto;
-import com.library.utils.dto.User.UserDto;
 import com.library.utils.payload.PaginationResponse;
 import com.library.utils.projections.UserLoansView;
+import com.library.utils.projections.UserView;
 import com.library.utils.projections.UsersView;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -21,7 +20,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
-import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -44,68 +42,44 @@ public class UserService implements IUserService {
 
     public ResponseEntity<PaginationResponse> findAllWithPaginationAndSorting(int page, int pageSize,
                                                                               String field, String direction) {
-        // subtracting one from page,since in pagination it starts from 0,but in frontend we will send values from 1
-        List<String> fields = Arrays.asList("first_name", "created_at");
-        List<String> directions = Arrays.asList("ASC", "DESC");
-
-        if (!fields.contains(field)) {
-            throw new BadRequestException("Sorting is allowed only by two fields: first_name and created_at");
-        }
-
-        if (!directions.contains(direction)) {
-            throw new BadRequestException("Sorting is possible only by two directions: ASC or DESC");
-        }
+        SortingPagination.containsDirection(direction);
+        SortingPagination.containsField(List.of("first_name", "created_at"), field);
 
         Pageable paging = PageRequest.of(page - 1, pageSize);
         Page<UsersView> users = this.userRepository.findAllUsers(field, direction, paging);
 
-        SortingPagination pagination = new SortingPagination();
-        pagination.doesHaveNext(users, page);
+        SortingPagination.doesHaveNext(users, page);
 
         if (users.isEmpty()) {
-            return ResponseEntity
-                    .status(404)
-                    .body(new PaginationResponse(true, 0, users.getTotalPages(),
-                            page, users.getContent()));
+            throw new NotFoundException("Users not found");
         }
 
         return ResponseEntity
                 .status(200)
                 .body(new PaginationResponse(true, users.getSize(), users.getTotalElements(),
-                        users.getTotalPages(), page, pagination.getPagination(), users.getContent()));
+                        users.getTotalPages(), page, SortingPagination.getPagination(),
+                        users.getContent()));
     }
 
-
     public User findOneByEmail(String email) {
-        if (email == null) throw new NotFoundException("User not found!");
+        if (email == null) throw new NotFoundException("Email cannot be null!");
 
         return this.userRepository.findByEmail(email);
     }
 
-    public UserDto findOne(Long id) {
-        User user = this.userRepository
-                .findById(id)
-                .orElseThrow(() -> new NotFoundException("User not found!"));
-
-        List<String> userRoles = this.userRepository.findUserRoles(user.getId());
-
-        return new UserDto(user.getId(), user.getFirstName(), user.getLastName(),
-                user.getEmail(), user.getEmailConfirmed(), userRoles, user.getPhone(),
-                user.getCreatedAt(), user.getUpdatedAt());
+    public UserView findOne(Long id) {
+        return this.userRepository
+                .findUserByIdWithRoles(id)
+                .orElseThrow(() -> new NotFoundException("User " + id + " not found."));
 
     }
 
     public List<UserLoansView> findUserLoans(Long id) {
         User user = this.userRepository
                 .findById(id)
-                .orElseThrow(() -> new NotFoundException("User not found with the given ID!"));
+                .orElseThrow(() -> new NotFoundException("User " + id + " not found."));
 
         return this.userRepository.findUserLoans(user.getId());
-    }
-
-
-    public List<String> findUserRoles(Long id) {
-        return this.userRepository.findUserRoles(id);
     }
 
     public User createUser(CreateUserDto params) {
